assets/tabs: make org tablist full width on smaller screens and add padding fixes #2620

--- a/meinberlin/assets/scss/components/_tabs.scss
+++ b/meinberlin/assets/scss/components/_tabs.scss
@@ -15,6 +15,16 @@
     padding-top: 2em;
 }
 
+.tablist--mobile {
+    min-width: 100%;
+    padding-bottom: $padding;
+
+    @media screen and (min-width: $breakpoint) {
+        min-width: auto;
+        padding-bottom: 0;
+    }
+}
+
 .tab {
     display: inline-block;
     position: relative;
